# MathExParser

./: CMakeLists.txt  README.md
src/: defined.cpp  defined.hpp  evaluate.cpp  evaluate.hpp  grammer.cpp  grammer.hpp  internalTypes.cpp  internalTypes.hpp  lester.cpp  lexer.cpp  lexer.hpp  main.cpp  mathparser.cpp  mathparser.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  tree.cpp  tree.hpp  utils.cpp  utils.hpp
